--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "server": "json-server --watch src/app/_data/db.json --port 3001"
   },
   "dependencies": {
     "next": "16.0.4",
